<resources>
    <string name="app_name">Card Suit Prediction</string>
    <string name="suitView">YOU WILL CHOOSE CLUBS</string>
    <string name="heartsButtonText">YOU WILL CHOOSE HEARTS</string>
    <string name="spadesButtonText">YOU WILL CHOOSE SPADES</string>
    <string name="diamondsButtonText">YOU WILL CHOOSE DIAMONDS</string>
    <string name="clubsButtonText">YOU WILL CHOOSE CLUBS</string>
    <string name="resetButtonText">RESET</string>
    <string name="clubsImageViewDescription">Image of a Club</string>
    <string name="heartsImageViewDescription">Image of a Heart</string>
    <string name="spadesImageViewDescription">Image of a Spade</string>
    <string name="diamondsImageViewDescription">Image of a Diamond</string>
</resources>
